# apron-auth

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
scripts/: setup_uv.sh
src/any_auth/: __init__.py  client.py  errors.py  protocols.py  scopes.py
src/any_auth/providers/: __init__.py  atlassian.py  github.py  google.py  linear.py  microsoft.py  notion.py  salesforce.py  slack.py  typeform.py
src/apron_auth/: __init__.py  client.py  errors.py  models.py  pkce.py  protocols.py  scopes.py  stores.py
src/apron_auth/providers/: _host_match.py  _identity_registry.py  atlassian.py  github.py  google.py  hubspot.py  identity.py  linear.py  microsoft.py  notion.py  salesforce.py  slack.py  typeform.py
tests/: conftest.py  test_client.py  test_end_to_end.py  test_errors.py  test_logging.py  test_models.py  test_pkce.py  test_protocols.py  test_scopes.py  test_stores.py
tests/integration/: test_atlassian.py  test_github.py  test_google.py  test_linear.py  test_microsoft.py  test_salesforce.py  test_slack.py
tests/providers/: test_atlassian.py  test_disconnect_fully_revokes.py  test_github.py  test_google.py  test_host_match.py  test_hubspot.py  test_identity_registry.py  test_linear.py  test_microsoft.py  test_notion.py  test_salesforce.py  test_scope_metadata_invariant.py  test_slack.py  test_typeform.py
